prepara importação de posts pro tumblr (2013—2016)

--- a/_posts/2015/2015-08-10-journey.md
+++ b/_posts/2015/2015-08-10-journey.md
@@ -8,6 +8,7 @@ tags:
   - jogos
   - aventura
   - PlayStation
+permalink: "/post/658004328220655616/"
 ---
 
 ![]({% link uploads/2019/07/journey.jpg %}){: role="presentation"}
