--- a/_posts/2015/2015-01-05-os-10-melhores-de-2014.md
+++ b/_posts/2015/2015-01-05-os-10-melhores-de-2014.md
@@ -13,6 +13,7 @@ tags:
   - jogos
 layout: post
 author: arthurf
+permalink: "/post/658003487905447936/"
 ---
 
 Agora que já revelamos nossos favoritos, vamos numerá-los, certo? Para finalizar essa leva de retrospectiva de 2014, nós juntamos tudo o que houve de melhor nos últimos 12 meses e os ordenamos para vocês. Siga abaixo com:
