--- a/_posts/2016/2016-07-25-looking.md
+++ b/_posts/2016/2016-07-25-looking.md
@@ -11,6 +11,7 @@ tags:
   - HBO
 author: arthurf
 image: "https://arthrfrts.files.wordpress.com/2018/03/looking.jpg"
+permalink: "/post/658007886803386368/"
 ---
 
 > É uma série sobre grandes temas, mas pequenos momentos.
