atualiza os permalinks do arquivo de posts (2017/1)

--- a/_posts/2017/2017-01-04-neighbor.md
+++ b/_posts/2017/2017-01-04-neighbor.md
@@ -7,6 +7,7 @@ category: Achados
 tags:
   - jogos
 image: "https://arthrfrts.files.wordpress.com/2018/03/neighbor.jpg"
+permalink: "/post/658040142355972096/"
 ---
 
 Parece que qualquer coisa pode acontecer.
