--- a/_posts/2017/2017-07-28-peter-pan.md
+++ b/_posts/2017/2017-07-28-peter-pan.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2017-07-28
-title: 'Com o passar do tempo, Peter Pan fica ainda mais trágico'
+title: "Com o passar do tempo, Peter Pan fica ainda mais trágico"
 image: "https://arthrfrts.files.wordpress.com/2018/03/peterpan.jpg"
 tags:
   - leituras
@@ -10,6 +10,7 @@ tags:
   - J. M. Barrie
   - literatura infantil
 author: arthurf
+permalink: "/post/658046949623300096/"
 ---
 
 _Peter Pan_, o personagem mágico fruto do carinho que o escrito J. M. Barrie tinha pelos garotos Llewyn Davies, já tem mais de cem anos, é de domínio público e já ganha diversas revisões. O motivo? Como personagem, ele só ganha força — e profundidade — com o tempo.
