atualiza os permalinks do arquivo de posts (2019)

--- a/_posts/2019/2019-11-20-last-fm.md
+++ b/_posts/2019/2019-11-20-last-fm.md
@@ -8,9 +8,10 @@ tags:
   - links
   - músicas
   - sites
+permalink: "/post/658060118539288577/"
 ---
 
-O Spotify tem o *Descobertas da Semana*, o Apple Music tem o *Para Você* e o YouTube tem o *Mix*. No fundo eles são a mesma coisa: uma lista com músicas que os algoritmos desses aplicativos acham que você vai gostar, porque o algoritmo “entende” seu gosto musical, e vai te mostrar músicas semelhantes. E, na maioria das vezes, parece que ele realmente entende. Essas playlists são compostas ou por faixas muito inspiradas naquelas que você tem no repeat, ou músicas que faz muito tempo que você não ouvia. Mas eu sempre tive a impressão que essas playlists, excelentes como são, acabam mostrando como não tem nada de especial nas músicas que eu gosto. É como se dissessem “ei, você gosta dessa música? Aqui vai outras vinte iguais, pra você esquecer de pausar e ficar ouvindo o dia inteiro”.
+O Spotify tem o _Descobertas da Semana_, o Apple Music tem o _Para Você_ e o YouTube tem o _Mix_. No fundo eles são a mesma coisa: uma lista com músicas que os algoritmos desses aplicativos acham que você vai gostar, porque o algoritmo “entende” seu gosto musical, e vai te mostrar músicas semelhantes. E, na maioria das vezes, parece que ele realmente entende. Essas playlists são compostas ou por faixas muito inspiradas naquelas que você tem no repeat, ou músicas que faz muito tempo que você não ouvia. Mas eu sempre tive a impressão que essas playlists, excelentes como são, acabam mostrando como não tem nada de especial nas músicas que eu gosto. É como se dissessem “ei, você gosta dessa música? Aqui vai outras vinte iguais, pra você esquecer de pausar e ficar ouvindo o dia inteiro”.
 
 Acho que esse é o sentimento contrário que eu tenho ao navegar pelo [Last.fm](https://www.last.fm/), um site que “faz scrobble” de tudo o que você escuta e, através de um banco de dados mantido pela comunidade, recomenda artistas e álbuns que você possa gostar. Na prática ele funciona de um jeito semelhante às playlists do Spotify e do Apple Music. A diferença é que, ao contrário de um algoritmo de inteligência artificial que fica observando padrões e ritmos naquilo que você ouve e quando você ouve, o Last.fm usa a grande inovação da web 2.0: as tags. Qualquer usuário pode adicionar tags aos álbuns, artistas ou faixas que gosta, desde gêneros musicais até classificações bem específicas. O Last.fm então observa as tags que você “gosta” (aquelas que mais aparecem entre os artistas e faixas que você escuta), e procura por outros lugares onde elas aparecem. Por exemplo, se você ouve MPB e também gosta de Velvet Underground, tem uma boa chance do Last.fm te apresentar o [_India_ da Gal Costa](https://www.last.fm/music/Gal+Costa/India).
 
