--- a/_posts/2019/2019-01-03-top-5-2018.md
+++ b/_posts/2019/2019-01-03-top-5-2018.md
@@ -14,6 +14,7 @@ tags:
   - músicas
 author: arthurf
 image: "https://i.imgur.com/DKFHMhr.jpg"
+permalink: "/post/658049722567868416/"
 ---
 
 Uma empregada doméstica no meio de uma crise política que definiria o seu país; um cantor em busca da paz de espírito; pessoas enfrentando o fim do mundo. 2018 parece ter sido feito de histórias íntimas contadas como se fossem épicos e de sentimentos imensos detalhados com intimidade. É uma luta de opostos. Mas talvez assim a gente vai conseguir entender o outro em tempos cada vez mais sombrios.
