--- a/_posts/2021/2021-12-24-top-5-2021.md
+++ b/_posts/2021/2021-12-24-top-5-2021.md
@@ -122,7 +122,7 @@ E também…
 
 * **[The Abortion I Didn't Have](https://www.nytimes.com/2021/12/02/magazine/abortion-parent-mother-child.html?utm_source=pocket_mylist)** por Merritt Tierce (The New York Times)
 
-  Texto.
+  O texto mais doloroso que eu li esse ano também foi o mais bonito. Um relato sobre a vida de uma mulher e de seus filhos, e de toda a condição de existência que foi imposta sobre eles.
 
 * **[Playtime](https://youtu.be/iTBW6jbHgX0)** por Dunkey (YouTube)
 
