corrige uma frase errada

--- a/_posts/2021/2021-12-24-top-5-2021.md
+++ b/_posts/2021/2021-12-24-top-5-2021.md
@@ -144,7 +144,7 @@ E também…
 
 Nada nesse ano me tocou tanto quanto a minissérie *The Underground Railroad*, de Barry Jenkins. Eu recomendo para todos que me perguntam uma boa minissérie para assistir. Eu digo que ela mexeu profundamente comigo, mas eu não digo o porquê. É fácil para um homem branco celebrar uma minissérie sobre a escravidão, de celebrar a representação do grande trauma fundador do nosso país, do racismo sistemático que assola nossa sociedade, e do sofrimento desumano e avassalador causado por brancos por centenas de anos. Essa é uma série sobre uma mulher fugindo muito mais da escravidão do que em busca da liberdade. Humanista, Jenkins dá ao espectador espaço para nos enxergarmos junto a Cora, mas jamais procura igualar minha vida ao sofrimento dela.
 
-É um impulso humano de nos enxergarmos em histórias. Mas uma das coisas que *The Underground Railroad* faz de tão potente é fazer a série nos enxergar tanto quanto nós a assistimos, de entender a repercussão daquela violência e do sofrimento pelo tempo. Em certos momentos, Jenkins corta para seus personagens dilatados do tempo narrativo, olhando para a câmera — olhando para nós — como se convidasse seus fantasmas para dentro do nosso íntimo. Enquanto eu assistia essa minissérie, que eu ainda não consegui rever mas que não sai da minha mente, eles olhavam direto para mim, cruzando o espaço e o tempo. E o que mais me deu medo era o que eles tavam enxergando. [No Prime Video](https://www.primevideo.com/detail/0TIXZLS0H0KQUMI0XB3R8JLXK0/).
+É um impulso humano de nos enxergarmos em histórias. Mas uma das coisas que *The Underground Railroad* faz de tão potente é fazer a série nos enxergar tanto quanto nós a assistimos, de entender a repercussão daquela violência e do sofrimento pelo tempo. Em certos momentos, Jenkins corta para seus personagens dilatados do tempo narrativo, olhando para a câmera — olhando para nós — como se convidasse seus fantasmas para dentro do nosso íntimo. Enquanto eu assistia essa minissérie, que eu ainda não consegui rever mas que não sai da minha mente, eles olhavam direto para mim, cruzando o espaço e o tempo. E o que mais me deu medo era o que eles estavam enxergando. [No Prime Video](https://www.primevideo.com/detail/0TIXZLS0H0KQUMI0XB3R8JLXK0/).
 
 E também…
 
