corrige um link quebrado

--- a/_posts/2021/2021-12-24-top-5-2021.md
+++ b/_posts/2021/2021-12-24-top-5-2021.md
@@ -154,7 +154,7 @@ E também…
 
 * **Estação Onze**, minissérie.
 
-  Chegou no finalzinho do ano, e talvez seja minha segunda série favorita do ano. Quem diria que uma série sobre o fim do mundo ia querer me fazer presenciar o que vem depois do apocalipse. É linda, e me lembra de [algo muito especial]() ([na HBO Max](https://play.hbomax.com/page/urn:hbo:page:GYZWoOQ6F9cLDCAEAAABP:type:series)).
+  Chegou no finalzinho do ano, e talvez seja minha segunda estreia favorita? Quem diria que uma série sobre o fim do mundo ia querer me fazer presenciar o que vem depois do apocalipse. É linda, e responde [uma pergunta que me segue há mais de um ano]({% post_url 2020/2020-05-26-eu-nao-sei-se-vou-conseguir-ver-o-fim-do-mundo-na-tv %}) ([na HBO Max](https://play.hbomax.com/page/urn:hbo:page:GYZWoOQ6F9cLDCAEAAABP:type:series)).
   
 * **Betty**, segunda temporada.
 
